--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^1.2.1
   dio: ^5.4.1
   flutter_carousel_slider: ^1.1.0
+  get_storage: ^2.1.1
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
