--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_carousel_slider: ^1.1.0
   get_storage: ^2.1.1
   loading_animation_widget: ^1.2.1
+  image_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
