--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   get_storage: ^2.1.1
   loading_animation_widget: ^1.2.1
   image_picker: ^1.1.0
+  intl_phone_number_input: ^0.7.4
+  country_state_city_picker: ^1.2.8
 
 dev_dependencies:
   flutter_test:
