--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.0
   intl_phone_number_input: ^0.7.4
   country_state_city_picker: ^1.2.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
