--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   country_state_city_picker: ^1.2.8
   intl: ^0.19.0
+  signalr_core: ^1.1.2
 
 dev_dependencies:
   flutter_test:
